about.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
    font-family:'Montserrat', sans-serif;
    font-size: 10px;
}

.about_section_wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    width: 90%;
    padding: 2%;
    margin: 0 auto;
}

.about-photo img{
    width: 90%;
    border-radius: 15px;
}

.first_wrapper {
    display: flex;
    flex-direction: column;
    width: 90%
}

.first_wrapper h1{
    font-size: 4rem;
    font-weight: 700;
}

.first_wrapper p{
    padding: 65px 0 35px 0;
    font-size: 1.6rem;
    line-height: 1.6;
}

.first_wrapper h2{
    font-size: 2rem;
    font-weight: 700;
}



@media (max-width: 990px) {

.about_section_wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 100px;
    margin-bottom: 10px;
}

.first_wrapper {
    padding-bottom: 150px;
    margin-bottom: 50px;
    text-align: center;
    width: 80%;
    margin: 0 auto;
}

.first_wrapper p{
    padding-bottom: 55px;
    padding-top: 75px;
    font-size: 1.6rem;
    line-height: 1.6;
    text-align: left;
    /* padding-left: 45px;
    padding-right: 45px; */
    /* max-width: 600px; */
}

.first_wrapper h2{
    font-size: 2rem;
    font-weight: 700;
    text-align: left;
    /* padding-left: 45px;
    padding-right: 25px; */
}

.about-photo img{
    display: none;
}

.first_wrapper h1{
    font-size: 3rem;
    font-weight: 700;
    margin-top: 20px;
}


}

